--- a/styles/entries.css
+++ b/styles/entries.css
@@ -3,6 +3,7 @@
     margin: 2rem 0;
     padding: 20px;
     border-radius: 20px;
+    border: rgb(227, 189, 132) 1px solid;
 }
 
 .tags {
@@ -13,7 +14,6 @@
 
 .tag {
     margin-top: 15px;
-    /* border: rgb(215, 161, 81) 1px solid; */
     background-color: rgb(235, 208, 186);
     padding: 5px;
     margin: 5px 10px 10px 0;
