--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ header {
     margin: 0;
     padding: 0;
     text-align: center;
+    border-bottom: rgb(227, 189, 132) 1px solid;
 }
 
 footer{
@@ -50,4 +51,5 @@ footer{
     padding: 10px;
     margin-top: 20px;
     text-align: center;
+    border-top: rgb(215, 161, 81) 1px solid;
 }
